--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
 
         <nav class="sidenav">
             <ul>
-                <li>
+                <li class="sidenav-item">
                     <a href="#">
-                        <img src="./assets/images/icons/cervo.svg" alt="Cervo">
+                        <img src="./assets/images/icons/cervo1.svg" alt="Cervo">
                     </a>
                 </li>
-                <li>
+                <li class="sidenav-item">
                     <a href="#">
                         <img src="./assets/images/icons/leao.svg" alt="Leão">
                     </a>
                 </li>
-                <li>
+                <li class="sidenav-item">
                     <a href="#">
                         <img src="./assets/images/icons/gato.svg" alt="Gato">
                     </a>
                 </li>
-                <li>
+                <li class="sidenav-item">
                     <a href="#">
                         <img src="./assets/images/icons/vaca.svg" alt="Vaca">
                     </a>
@@ -50,7 +50,7 @@
                         <img src="./assets/images/icons/ovelha.svg" alt="Ovelha">
                     </a>
                 </li>
-                <li>
+                <li class="sidenav-item">
                     <a href="#">
                         <img src="./assets/images/icons/abelha.svg" alt="Abelha">
                     </a>
@@ -75,18 +75,19 @@
                 </div>
             </div>
 
-            <p>É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico</p>
+            <p class="col-wide">É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico</p>
 
-            <img src="./assets/images/wolf1.jpg" alt="Wolf 1">
+            <img class="imagem-1" src="./assets/images/wolf1.jpg" alt="Wolf 1">
 
             <p>É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos.</p>
-            <img src="./assets/images/wolf2.jpg" alt="Wolf 2">
+            
+            <img class="imagem-2" src="./assets/images/wolf2.jpg" alt="Wolf 2">
 
             <p>O peso e tamanho dos lobos variam muito em todo o mundo, tendendo a aumentar proporcionalmente com a latitude, como previsto pela teoria de Christian Bergmann. Em geral, a altura, medida a partir dos ombros, varia de 60 a 95 centímetros.</p>
 
             <p>O peso varia geograficamente. Em média, os lobos europeus pesam 38,5 kg; os lobos da América do Norte, 36 kg; os lobos indianos e árabes, 25 kg.[7] Embora raros, lobos com mais de 77 kg foram encontrados no Alasca, Canadá,[8] e na antiga União Soviética.</p>
 
-            <blockquote class="citacao">
+            <blockquote class="citacao col-wide">
                 <p>“Há algo no uivar do lobo que tira um homem do aqui e agora e o transporta para uma floresta da mente.”</p>
             </blockquote>
 
@@ -105,7 +106,7 @@
                 <p>É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico.</p>
             </div>
 
-            <img src="./assets/images/wolf3.jpg" alt="Wolf 3">
+            <img class="col-wide" src="./assets/images/wolf3.jpg" alt="Wolf 3">
         </main>
 
         <aside class="anuncios">
