Título e caracteristicas prontos para pc

--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
 
             <div class="caracteristicas">
                 <div>
-                    <span>72</span>
-                    <span>kg</span>
+                    <span class="numero">72</span>
+                    <span class="rotulo">kg</span>
                 </div>
                 <div>
-                    <span>13</span>
-                    <span>age</span>
+                    <span class="numero">13</span>
+                    <span class="rotulo">age</span>
                 </div>
             </div>
 
